chore: refactor datashield package handling in a separate class